fix: max-height value on smaller screen is correct

--- a/client/src/app/components/game-carousel/game-carousel.component.scss
+++ b/client/src/app/components/game-carousel/game-carousel.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 5vh;
-    max-height: 67vh;
+    max-height: 80vh;
 }
 
 .game-card-container {
